[metadata]
name = martian
version = 1.0.0
author = David Hobson
author_email = david.hobson@international.gc.ca
description = This Python package helps automate natural language processing tasks and text mining. This includes basic processing, tweet processing, language translation (using the Azure API), text summarization and word embeddings, and also modules for determining word frequencies
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gccode.ssc-spc.gc.ca/data-science-group/martian
project_urls =
    Bug Tracker = https://gccode.ssc-spc.gc.ca/data-science-group/martian/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src